# libre-gaming-engines

./: README.md
libprocu-dialogue/: README.md
libprocu-dialogue/data/: dialogue-demo2.json  dialogue-demo4.json  dialogue-one.json  dialogues-header.json  dialogues-minimal.json
libprocu-dialogue/doc/: CHANGES.md  dialogue-exchange-system-specification.md  doxygen-procu.cfg  libprocu-dialogue-documentation.md
libprocu-dialogue/samples/demo1/: README.md
libprocu-dialogue/samples/demo1/data/: dialogue-demo1.json  dialogue-demo1short.json  dialogue-demo1shortest.json
libprocu-dialogue/samples/demo1/sh/: make
libprocu-dialogue/samples/demo1/src/: dialogue-demo1.cpp
libprocu-dialogue/samples/demo2/sh/: clean
libprocu-dialogue/samples/demo2/src/: dialogue.cpp
libprocu-dialogue/samples/demo3/: README.md
libprocu-dialogue/samples/demo3/data/: dialogue-demo3.json
libprocu-dialogue/samples/demo3/sh/: make
libprocu-dialogue/samples/demo3/src/: dialogue.cpp
libprocu-dialogue/samples/demo4/: README.md
libprocu-dialogue/samples/demo4/src/: achi.cpp  dialogue.cpp
libprocu-dialogue/sh/: doxy
libprocu-dialogue/src/: dialogue.cpp
libprocu-dialogue/src/lib/: libprocu-dialogue-parser-dlgsystem.hpp  libprocu-dialogue.hpp
libprocu-galaxy/: CHANGES.md  README.md
libprocu-galaxy/doc/: doxygen-procu.cfg
libprocu-galaxy/sh/: clean  doxy  make  make-clang  makelib
libprocu-galaxy/src/: CMakeLists.txt  Makefile  gengalaxy.cpp  showgalaxy.cpp
libprocu-galaxy/src/ext/: pcg32.h
libprocu-galaxy/src/lib/: color.hpp  libprocu-galaxy.hpp  vector3d.hpp
(+3 files in other folders)
